--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ nav {
 @media (max-width: 450px) {
   nav {
     margin-top: 3rem;
-    margin-bottom: 24rem;
+    margin-bottom: 30rem;
     width: 80vw;
   }
 }
@@ -105,6 +105,7 @@ nav a ion-icon {
 .hero-text-wrapper {
   max-width: 75vw;
   margin: 10vw auto 3rem auto;
+  margin-bottom: 8rem;
 }
 
 @media (max-width: 450px) {
@@ -121,7 +122,7 @@ nav a ion-icon {
 
 .hero-text-wrapper .hero-text {
   width: 75%;
-  font-size: clamp(1.4rem, 9vw, 6rem);
+  font-size: clamp(1.4rem, 8vw, 6rem);
   line-height: 1.05;
   transform: translateY(8rem);
   transition: 1000ms;
@@ -138,12 +139,19 @@ nav a ion-icon {
 }
 
 .image-carousel {
-  width: 91vw;
+  width: 85vw;
+  max-height: 90vh;
   margin: 0 auto;
   border-radius: 5px;
   overflow: hidden;
   transform: translateY(8rem);
   transition: 1000ms;
+}
+
+.image-carousel:hover * {
+  transform: scale(0.95);
+  transition: transform 600ms;
+  border-radius: inherit;
 }
 
 @media (max-width: 450px) {
@@ -420,6 +428,12 @@ nav a ion-icon {
   background-size: cover;
   filter: brightness(40%);
   transition: 250ms;
+}
+
+@media (max-width: 450px) {
+  .all-projects::before {
+    filter: blur(10px);
+  }
 }
 
 .all-projects:hover {
