--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,7 @@ nav a ion-icon {
   flex-wrap: wrap;
   padding-block: clamp(0, 12vw, 4rem);
   position: relative;
-  margin-top: 2rem;
+  margin-top: 3rem;
 }
 
 @media (max-width: 450px) {
@@ -269,7 +269,7 @@ nav a ion-icon {
 
 @media (max-width: 450px) {
   .clients-list {
-    margin-bottom: 2rem;
+    margin-block: 2rem;
   }
 }
 
